refactor : 분산 처리