@@ -12,7 +12,6 @@ import com.trendex.trendex.domain.macd.binancemacd.model.BinanceMacd;
 import com.trendex.trendex.domain.macd.binancemacd.service.BinanceMacdService;
 import com.trendex.trendex.domain.rsi.binancersi.model.BinanceRsi;
 import com.trendex.trendex.domain.rsi.binancersi.service.BinanceRsiService;
-import com.trendex.trendex.global.client.webclient.service.TelegramService;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.scheduling.annotation.Scheduled;
@@ -25,6 +24,8 @@ import java.time.LocalDateTime;
 import java.time.ZoneOffset;
 import java.util.List;
 import java.util.Objects;
+import java.util.concurrent.CompletableFuture;
+import java.util.concurrent.Executors;
 import java.util.stream.Collectors;
 
 @Service
@@ -40,15 +41,11 @@ public class BinanceCandleFacade {
 
     private final BinanceMacdService binanceMacdService;
 
-    private final TelegramService telegramService;
-
     private final BinanceRsiService binanceRsiService;
 
-    //    @Scheduled(cron = "0 */1 * * * *")
-    @Scheduled(fixedRate = 6000000)
+    @Scheduled(cron = "0 */5 * * * *")
     public void fetchAndSaveBinanceData() {
         List<BinanceSymbol> binanceSymbols = binanceSymbolService.findAll();
-
 
         Flux<BinanceCandle> binanceCandleFlux = binanceCandleFetchService.fetchBinanceData(binanceSymbols).share();
         binanceCandleService.saveAll(binanceCandleFlux)
@@ -57,29 +54,26 @@ public class BinanceCandleFacade {
                                 .subscribeOn(Schedulers.boundedElastic()),
                         Mono.fromRunnable(() -> saveMacd(binanceSymbols))
                                 .subscribeOn(Schedulers.boundedElastic())
-                ));
-
+                ))
+                .subscribe();
 
     }
 
     public void saveMacd(List<BinanceSymbol> binanceSymbols) {
+        var executorService = Executors.newFixedThreadPool(10);
 
-        long startTime = System.currentTimeMillis();
-
-        List<BinanceMacd> binanceMacds = binanceSymbols
-                .stream()
-                .map(binanceSymbol -> {
+        List<CompletableFuture<BinanceMacd>> futures = binanceSymbols.stream()
+                .map(binanceSymbol -> CompletableFuture.supplyAsync(() -> {
                     String symbol = binanceSymbol.getSymbol();
                     List<CryptoClosePrice> cryptoClosePrices26 = binanceCandleService.getClosePricesBySymbolAndTime(symbol, CandleAnalysisTime.MACD_TWENTY_SIX_TIME_STAMP.getTime());
-                    List<Double> cryptoClosePrices26Values = cryptoClosePrices26
-                            .stream()
+                    List<Double> cryptoClosePrices26Values = cryptoClosePrices26.stream()
                             .map(CryptoClosePrice::getClosePrice)
                             .collect(Collectors.toList());
 
                     List<Double> cryptoClosePrices12Values = cryptoClosePrices26.stream()
                             .filter(cryptoClosePrice -> cryptoClosePrice.getTimeStamp() <= CandleAnalysisTime.MACD_TWELVE_TIME_STAMP.getTime())
                             .map(CryptoClosePrice::getClosePrice)
-                            .toList();
+                            .collect(Collectors.toList());
 
                     if (cryptoClosePrices26.size() < 26) {
                         return null;
@@ -91,33 +85,44 @@ public class BinanceCandleFacade {
                         macdSignalValue = CandleAnalysisUtil.calculateMACDSignal(macdValues);
                     }
                     return new BinanceMacd(symbol, macdValue, macdSignalValue, LocalDateTime.now().toEpochSecond(ZoneOffset.UTC) * 1000);
-                })
+                }, executorService))
+                .toList();
+
+        List<BinanceMacd> binanceMacds = futures.stream()
+                .map(CompletableFuture::join)
                 .filter(Objects::nonNull)
                 .collect(Collectors.toList());
+
         binanceMacdService.saveAll(binanceMacds);
+        executorService.shutdown();
     }
 
     public void saveRsi(List<BinanceSymbol> binanceSymbols) {
-        List<BinanceRsi> binanceRsis = binanceSymbols
-                .stream()
-                .map(binanceSymbol -> {
+        var executorService = Executors.newFixedThreadPool(10);
+
+        List<CompletableFuture<BinanceRsi>> futures = binanceSymbols.stream()
+                .map(binanceSymbol -> CompletableFuture.supplyAsync(() -> {
                     String symbol = binanceSymbol.getSymbol();
                     List<Double> cryptoClosePrices14 = binanceCandleService.getClosePricesBySymbolAndTime(symbol, CandleAnalysisTime.RSI_FOURTEEN_TIME_STAMP.getTime())
                             .stream()
                             .map(CryptoClosePrice::getClosePrice)
                             .collect(Collectors.toList());
+
                     if (cryptoClosePrices14.size() < 14) {
                         return null;
                     }
                     Double rsiValue = CandleAnalysisUtil.calculateRSI(cryptoClosePrices14);
                     return new BinanceRsi(symbol, rsiValue, LocalDateTime.now().toEpochSecond(ZoneOffset.UTC) * 1000);
-                })
+                }, executorService))
+                .toList();
+
+        List<BinanceRsi> binanceRsis = futures.stream()
+                .map(CompletableFuture::join)
                 .filter(Objects::nonNull)
                 .collect(Collectors.toList());
 
         binanceRsiService.saveAll(binanceRsis);
-
-
+        executorService.shutdown();
     }
 
 }
